--- a/src/output/team.html
+++ b/src/output/team.html
@@ -94,6 +94,10 @@
             </div>
         </div>
     </div>
+    
+    <footer>
+        <p>&copy; 2024 My Team Profile Generator | <a href="https://github.com/jennysiu">Jenny Siu</a></p>
+    </footer>
 </body>
 </html>
     
