manager card on its own level

--- a/src/output/team.html
+++ b/src/output/team.html
@@ -26,18 +26,22 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="row">
                     
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card employee-card manager">
-                        <div class="card-header">
-                            <h2 class="card-title">john</h2>
-                            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: asdf</li>
-                                <li class="list-group-item">Email: <a href="mailto:qewrg">qewrg</a></li>
-                                <li class="list-group-item">Office number: wDFG</li>
-                            </ul>
+                <div class= "container manager-container">
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                            <div class="card employee-card manager">
+                                <div class="card-header">
+                                    <h2 class="card-title">john</h2>
+                                    <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+                                </div>
+                                <div class="card-body">
+                                    <ul class="list-group">
+                                        <li class="list-group-item">ID: asdf</li>
+                                        <li class="list-group-item">Email: <a href="mailto:qewrg">qewrg</a></li>
+                                        <li class="list-group-item">Office number: wDFG</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
